lab solutoin ready

--- a/book/math_foundations/struct/pca.ipynb
+++ b/book/math_foundations/struct/pca.ipynb
@@ -136,7 +136,7 @@
    "id": "0066d9d4",
    "metadata": {},
    "source": [
-    "Als we kijken naar de assen die door de oorspronkelijke data gevormd worden (in het blauw), zien we dat die niet samen lopen met de \"vorm\" van de variatie in sample. De assen in het rood daarentegen, liggen wel in de richting van de variatie."
+    "Als we kijken naar de assen die door de oorspronkelijke data gevormd worden (in het blauw), zien we dat die niet samen lopen met de \"vorm\" van de variatie in de sample. De assen in het rood daarentegen, liggen wel in de richting van de variatie."
    ]
   },
   {
