--- a/book/math_foundations/struct/tSNE.ipynb
+++ b/book/math_foundations/struct/tSNE.ipynb
@@ -49,9 +49,9 @@
     "\n",
     "### Beperkingen\n",
     "- Geen globale structuur: Afstanden tussen clusters zijn niet betekenisvol\n",
-    "- Computationeel zwaar: $O(n^2)$ complexiteit (maar algoritmes als Barnes-Hut reduceren dit)\n",
+    "- Computationeel zwaar: $O(n^2)$ complexiteit (maar algoritmes zoals Barnes-Hut reduceren dit)\n",
     "- Niet-deterministisch: Resultaat hangt af van initialisatie en hyperparameters\n",
-    "- Geen nieuwe data: Geen directe transformatie voor nieuwe punten (wel approximaties)\n"
+    "- Geen nieuwe data: Geen directe transformatie voor nieuwe punten (wel approximaties)"
    ]
   },
   {
@@ -65,16 +65,16 @@
     "\n",
     "UMAP (_Uniform Manifold Approximation and Projection_) is gebaseerd op de assumptie dat data op een lager-dimensionale _manifold_ ligt in de hoge-dimensionale ruimte. Het gebruikt ideeën uit Riemannse meetkunde en topologie.\n",
     "\n",
-    "Kernidee: Bouw een grafische representatie van de data\n",
+    "Kernidee: Bouw een graafrepresentatie van de data\n",
     "\n",
     "1. Lokale afstandsmetriek: UMAP veronderstelt dat de data lokaal Euclidisch is. Voor elk punt $\\mathbf{x}_i$ schatten we de lokale metriek door de afstand tot de dichtstbijzijnde buur $\\rho_i$:\n",
     "   $$w(\\mathbf{x}_i, \\mathbf{x}_j) = \\exp\\left(-\\frac{\\max(0, d(\\mathbf{x}_i, \\mathbf{x}_j) - \\rho_i)}{\\sigma_i}\\right)$$\n",
     "   \n",
     "   waar $d(\\mathbf{x}_i, \\mathbf{x}_j)$ de afstand tussen punten is. Dit creëert een _fuzzy graph_ waar edges gewichten hebben tussen 0 en 1.\n",
     "\n",
-    "2. Fuzzy simplicial complex: Deze gewichten $w(\\mathbf{x}_i, \\mathbf{x}_j)$ definiëren een topologische structuur:\n",
+    "2. Fuzzy simplicial complex: De gewichten $w(\\mathbf{x}_i, \\mathbf{x}_j)$ definiëren een topologische structuur:\n",
     "   - Punt $j$ behoort \"gedeeltelijk\" tot de buurt van punt $i$\n",
-    "   - Symmetrizeer: $w_{ij} = w(\\mathbf{x}_i, \\mathbf{x}_j) + w(\\mathbf{x}_j, \\mathbf{x}_i) - w(\\mathbf{x}_i, \\mathbf{x}_j) \\cdot w(\\mathbf{x}_j, \\mathbf{x}_i)$\n",
+    "   - Symmetriseer: $w_{ij} = w(\\mathbf{x}_i, \\mathbf{x}_j) + w(\\mathbf{x}_j, \\mathbf{x}_i) - w(\\mathbf{x}_i, \\mathbf{x}_j) \\cdot w(\\mathbf{x}_j, \\mathbf{x}_i)$\n",
     "\n",
     "3. Optimalisatie: Vind lage-dimensionale representatie met analoge graaf $V$ die $W$ benadert via {ref}`cross-entropy <target-cross-entropy>`:\n",
     "   $$\\mathcal{L} = \\sum_{i,j} w_{ij} \\log \\frac{w_{ij}}{v_{ij}} + (1-w_{ij})\\log\\frac{1-w_{ij}}{1-v_{ij}}$$\n",
@@ -119,21 +119,21 @@
     "### Vuistregels voor keuze\n",
     "#### PCA\n",
     "- Data is ongeveer lineair\n",
-    "- Je wil snelle, schaalbare dimensionaliteitsreductie\n",
-    "- Je wil interpreteerbare componenten\n",
+    "- Je wilt snelle, schaalbare dimensionaliteitsreductie\n",
+    "- Je wilt interpreteerbare componenten\n",
     "- Je moet nieuwe data kunnen transformeren\n",
     "\n",
     "#### t-SNE\n",
     "- Visualisatie is het hoofddoel\n",
-    "- Je wil duidelijke cluster-separatie\n",
-    "- Dataset is niet te groot (< 10,000 punten)\n",
+    "- Je wilt duidelijke clusterseparatie\n",
+    "- Dataset is niet te groot (< 10.000 punten)\n",
     "- Lokale structuur is belangrijker dan globale\n",
     "\n",
     "#### UMAP\n",
-    "- Je wil zowel clusters als hun onderlinge relaties\n",
-    "- Dataset is groot (> 10,000 punten)\n",
+    "- Je wilt zowel clusters als hun onderlinge relaties\n",
+    "- Dataset is groot (> 10.000 punten)\n",
     "- Je moet nieuwe data kunnen transformeren\n",
-    "- Je wil verder werken met de embedding (niet alleen visualisatie)"
+    "- Je wilt verder werken met de embedding (niet alleen visualisatie)"
    ]
   },
   {
