prep exploratory ready

--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -1095,7 +1095,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "1f20c428",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
