prep session ready

--- a/book/ml_principles/labs/prep/structured.ipynb
+++ b/book/ml_principles/labs/prep/structured.ipynb
@@ -23,8 +23,10 @@
     "❓ Wat is de target variabele van het ML model?\n",
     "  \n",
     "✍️  \n",
+    "Het logaritme van de huurprijzen\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "De target variabele wordt in de eerste markdown cel vermeld. Cel 6 geeft de verdeling van de target variabele."
    ]
   },
   {
@@ -36,8 +38,11 @@
     "❓ Welke ML modellen worden er gebruikt?\n",
     "  \n",
     "✍️  \n",
+    "- Lineaire regressie\n",
+    "- Extreme Gradient Boosting\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 26 en 27 bevatten de modeldefinities"
    ]
   },
   {
@@ -49,8 +54,11 @@
     "❓ Wat zijn de dimensies van de feature matrix?\n",
     "  \n",
     "✍️  \n",
+    "- Observaties: 74111\n",
+    "- Features: 53\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 23 beschrijft de feature matrix"
    ]
   },
   {
@@ -62,8 +70,10 @@
     "❓ Met welke soort van data structuur hebben we te maken bij deze features?\n",
     "  \n",
     "✍️  \n",
+    "Dit is een voorbeeld van gestructureerde data. Iedere observatie komt overeen met waarden voor verschillende variabelen met een vaste, specifieke betekenis.\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 23 beschrijft de feature matrix"
    ]
   },
   {
@@ -75,8 +85,12 @@
     "❓ Geef de naam en waarden van minstens twee hyper parameters.\n",
     "  \n",
     "✍️  \n",
+    "- `n_estimators=100`\n",
+    "- `learning_rate=0.1`\n",
+    "- `max_depth=6`\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 27: De hyper parameters die bij XGBoost gebruikt worden."
    ]
   },
   {
@@ -85,11 +99,15 @@
    "metadata": {},
    "source": [
     "### Q6\n",
-    "❓ Hoe wordt de data opgedeeld voor de training, validatie de test van de modellen en over hoeveel observaties gaat het in elk deel?\n",
+    "❓ Hoe wordt de data opgedeeld voor de training, validatie en test van de modellen en over hoeveel observaties gaat het in elk deel?\n",
     "  \n",
     "✍️  \n",
+    "- Training: 59288 observaties; Deze observaties gebruikt binnen een vijfvoudig cross-validatie schema.\n",
+    "- Test: 14823 observaties\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 25: beschrijft de training/test split\n",
+    "Cel 26 en 27 bevatten de cross-validatie definities"
    ]
   },
   {
@@ -101,6 +119,7 @@
     "❓ Met welke soort _taak_ hebben we hier te maken?\n",
     "  \n",
     "✍️  \n",
+    "Regressie: Het doel is om continue, numerieke waarden te voorspellen.\n",
     "  \n",
     "🔑  \n"
    ]
@@ -114,6 +133,7 @@
     "❓ Met welke soort _ervaring_ hebben we hier te maken?\n",
     "  \n",
     "✍️  \n",
+    "Supervised learning: Voor iedere observatie in de feature matrix wordt de overeenkomstige target waarden aan het model meegegeven.\n",
     "  \n",
     "🔑  \n"
    ]
@@ -127,8 +147,12 @@
     "❓ Geef minstens twee voorbeelden van performantiematen (_aka score metrics_).\n",
     "  \n",
     "✍️  \n",
+    "- Mean absolute error\n",
+    "- Mean squared error\n",
+    "- R-Squared\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Deze metrieken worden in Cel 28 berekend."
    ]
   },
   {
@@ -137,11 +161,15 @@
    "metadata": {},
    "source": [
     "### Q10\n",
-    "❓ Stel dat we moeten besparen op drie features, welke zouden we moeten kiezen? \n",
+    "❓ Stel dat we moeten besparen en we maar drie features mogen gebruiken, welke zouden we moeten kiezen? \n",
     "  \n",
     "✍️  \n",
+    "- `room_type_Entire home/apt`: 0.5896\n",
+    "- `neighborhood_price_level`: 0.1311\n",
+    "- `bathrooms`: 0.0718\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 29 visualiseert de feature importances"
    ]
   },
   {
@@ -153,8 +181,10 @@
     "❓ Welk model type geeft het beste resultaat en op basis waarvan wordt dit bepaald?\n",
     "  \n",
     "✍️  \n",
+    "Het XGBoost model geeft een veel betere gemiddelde cross-validatie R-squared waarden in vergelijking met het lineaire regressiemodel\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Cel 27 vergelijkt de R-squared waarden voor de twee modellen"
    ]
   }
  ],
