--- a/book/math_foundations/labs/probability-basics.ipynb
+++ b/book/math_foundations/labs/probability-basics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "c7dafbec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "a96479fa",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "d3551521",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "fa1ffedf",
    "metadata": {},
    "outputs": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "ab852712",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "37c61226",
    "metadata": {},
    "outputs": [
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "6d2f1889",
    "metadata": {},
    "outputs": [
@@ -2920,7 +2920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "071a6b34",
    "metadata": {},
    "outputs": [
@@ -3804,7 +3804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "22fb8508",
    "metadata": {},
    "outputs": [
@@ -3836,7 +3836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "94d02a5d",
    "metadata": {},
    "outputs": [
@@ -4728,7 +4728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3db2346c",
    "metadata": {},
    "outputs": [
@@ -5632,7 +5632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "48c97045",
    "metadata": {},
    "outputs": [
@@ -6569,7 +6569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9501cb5e",
    "metadata": {},
    "outputs": [
@@ -6578,7 +6578,7 @@
      "output_type": "stream",
      "text": [
       "1. P(x ≤ 0) = 0.5000\n",
-      "2. P(-1 ≤ x ≤ 1) = 0.6827 (~68% rule)\n",
+      "2. P(-1 ≤ x ≤ 1) = 0.6827\n",
       "3. P(x > 2) = 0.0228\n"
      ]
     },
@@ -9161,7 +9161,7 @@
     "\n",
     "# 2. P(-1 ≤ x ≤ 1)\n",
     "p2 = std_normal.cdf(1) - std_normal.cdf(-1)\n",
-    "print(f\"2. P(-1 ≤ x ≤ 1) = {p2:.4f} (~68% rule)\")\n",
+    "print(f\"2. P(-1 ≤ x ≤ 1) = {p2:.4f}\")\n",
     "\n",
     "# 3. P(x > 2)\n",
     "p3 = 1 - std_normal.cdf(2)\n",
@@ -9206,7 +9206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "34436f16",
    "metadata": {},
    "outputs": [
@@ -10103,7 +10103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "4d00a457",
    "metadata": {},
    "outputs": [
@@ -12696,7 +12696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "e2e0184f",
    "metadata": {},
    "outputs": [
@@ -13596,7 +13596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "2182db42",
    "metadata": {},
    "outputs": [
@@ -14545,7 +14545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "726f292e",
    "metadata": {},
    "outputs": [
