mfou prep solutions

--- a/book/math_foundations/labs/prep/backprop.ipynb
+++ b/book/math_foundations/labs/prep/backprop.ipynb
@@ -18,13 +18,17 @@
     "import os\n",
     "\n",
     "import kagglehub\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from torch import nn"
+    "import torch\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from torch import nn, optim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "71664f4b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c947263f",
    "metadata": {},
    "outputs": [],
@@ -71,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "27633276",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data loaded successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Download data from kaggle\n",
     "path = kagglehub.dataset_download(\"yashdevladdha/uber-ride-analytics-dashboard\")\n",
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4a516602",
    "metadata": {},
    "outputs": [],
@@ -115,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e578f0f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['UPI' 'Debit Card' 'Cash' 'Uber Wallet' 'Credit Card']\n"
+     ]
+    }
+   ],
    "source": [
     "print(df[\"Payment Method\"].unique())"
    ]
@@ -134,11 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2645bb12",
+   "execution_count": 7,
+   "id": "77796839",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = df[\"Payment Method\"].values\n",
+    "\n",
+    "# Make a map to convert payment methods to integers\n",
+    "payment_method_map = {method: idx for idx, method in enumerate(df[\"Payment Method\"].unique())}\n",
+    "y = np.array([payment_method_map[method] for method in y])\n",
+    "\n",
+    "print(np.unique(y))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,11 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fe3a9a1",
+   "execution_count": 8,
+   "id": "f8653520",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X = df[[\"Avg VTAT\", \"Avg CTAT\", \"Booking Value\", \"Ride Distance\"]].values\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,11 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19075209",
+   "execution_count": 9,
+   "id": "0836f973",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 81600\n",
+      "Test set size: 20400\n",
+      "Training set shape: X=(81600, 4), y=(81600,)\n",
+      "Test set shape: X=(20400, 4), y=(20400,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(f\"Training set size: {len(X_train)}\")\n",
+    "print(f\"Test set size: {len(X_test)}\")\n",
+    "print(f\"Training set shape: X={X_train.shape}, y={y_train.shape}\")\n",
+    "print(f\"Test set shape: X={X_test.shape}, y={y_test.shape}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,11 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e715075e",
+   "execution_count": 10,
+   "id": "dbdd1db3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train_tensor = torch.FloatTensor(X_train).to(device)\n",
+    "X_test_tensor = torch.FloatTensor(X_test).to(device)\n",
+    "y_train_tensor = torch.LongTensor(y_train).to(device)\n",
+    "y_test_tensor = torch.LongTensor(y_test).to(device)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,11 +265,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eecc6118",
+   "execution_count": 11,
+   "id": "308113c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ PyTorch Neural Network Model Created!\n",
+      "\n",
+      "Model Architecture:\n",
+      "NeuralNetwork(\n",
+      "  (fc1): Linear(in_features=4, out_features=10, bias=True)\n",
+      "  (relu): ReLU()\n",
+      "  (fc2): Linear(in_features=10, out_features=5, bias=True)\n",
+      ")\n",
+      "\n",
+      "Total parameters: 105\n",
+      "\n",
+      "Parameter details:\n",
+      "  fc1.weight: torch.Size([10, 4]) (40 parameters)\n",
+      "  fc1.bias: torch.Size([10]) (10 parameters)\n",
+      "  fc2.weight: torch.Size([5, 10]) (50 parameters)\n",
+      "  fc2.bias: torch.Size([5]) (5 parameters)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create model instance\n",
+    "n_features = X_train.shape[1]  # 4 features\n",
+    "n_hidden = 10\n",
+    "n_classes = len(payment_method_map)\n",
+    "\n",
+    "model = NeuralNetwork(n_features, n_hidden, n_classes).to(device)\n",
+    "\n",
+    "print(\"✓ PyTorch Neural Network Model Created!\")\n",
+    "print(\"\\nModel Architecture:\")\n",
+    "print(model)\n",
+    "print(f\"\\nTotal parameters: {sum(p.numel() for p in model.parameters())}\")\n",
+    "print(\"\\nParameter details:\")\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(f\"  {name}: {param.shape} ({param.numel()} parameters)\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,15 +320,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2810d64b",
+   "execution_count": 12,
+   "id": "daa86e77",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Loss function and optimizer configured!\n",
+      "\n",
+      "Loss function: CrossEntropyLoss()\n",
+      "Optimizer: SGD (\n",
+      "Parameter Group 0\n",
+      "    dampening: 0\n",
+      "    differentiable: False\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.02\n",
+      "    maximize: False\n",
+      "    momentum: 0\n",
+      "    nesterov: False\n",
+      "    weight_decay: 0\n",
+      ")\n",
+      "Learning rate: 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.02)\n",
+    "\n",
+    "print(\"✓ Loss function and optimizer configured!\")\n",
+    "print(f\"\\nLoss function: {criterion}\")\n",
+    "print(f\"Optimizer: {optimizer}\")\n",
+    "print(f\"Learning rate: {optimizer.param_groups[0]['lr']}\")"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "9b8a8bc6",
+   "id": "94ff08ab",
    "metadata": {},
    "source": [
     "## ✍️\n",
@@ -236,11 +368,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15044287",
+   "execution_count": 13,
+   "id": "181f84c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Neural Network with PyTorch...\n",
+      "Architecture: 4 → 10 (ReLU) → 5\n",
+      "Learning rate: 0.02\n",
+      "Epochs: 2000\n",
+      "\n",
+      "Training progress:\n",
+      "----------------------------------------------------------------------\n",
+      "Epoch    1 | Train Loss: 2.1648 | Test Loss: 2.1529 | Train Acc: 16.45% | Test Acc: 16.88%\n",
+      "Epoch  200 | Train Loss: 1.4613 | Test Loss: 1.4589 | Train Acc: 43.11% | Test Acc: 43.03%\n",
+      "Epoch  400 | Train Loss: 1.4191 | Test Loss: 1.4152 | Train Acc: 44.52% | Test Acc: 44.53%\n",
+      "Epoch  600 | Train Loss: 1.4101 | Test Loss: 1.4062 | Train Acc: 44.86% | Test Acc: 44.89%\n",
+      "Epoch  800 | Train Loss: 1.4059 | Test Loss: 1.4021 | Train Acc: 44.99% | Test Acc: 44.97%\n",
+      "Epoch 1000 | Train Loss: 1.4034 | Test Loss: 1.3996 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "Epoch 1200 | Train Loss: 1.4017 | Test Loss: 1.3979 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "Epoch 1400 | Train Loss: 1.4005 | Test Loss: 1.3968 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "Epoch 1600 | Train Loss: 1.3996 | Test Loss: 1.3959 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "Epoch 1800 | Train Loss: 1.3989 | Test Loss: 1.3953 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "Epoch 2000 | Train Loss: 1.3984 | Test Loss: 1.3947 | Train Acc: 45.01% | Test Acc: 45.00%\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "✓ Training completed!\n",
+      "\n",
+      "Final Results:\n",
+      "  Training Loss: 1.3984\n",
+      "  Test Loss: 1.3947\n",
+      "  Training Accuracy: 45.01%\n",
+      "  Test Accuracy: 45.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training configuration\n",
+    "n_epochs = 2000\n",
+    "\n",
+    "# Training history\n",
+    "train_losses = []\n",
+    "test_losses = []\n",
+    "train_accuracies = []\n",
+    "test_accuracies = []\n",
+    "\n",
+    "print(\"Training Neural Network with PyTorch...\")\n",
+    "print(f\"Architecture: {n_features} → {n_hidden} (ReLU) → {n_classes}\")\n",
+    "print(f\"Learning rate: {optimizer.param_groups[0]['lr']}\")\n",
+    "print(f\"Epochs: {n_epochs}\")\n",
+    "print(\"\\nTraining progress:\")\n",
+    "print(\"-\" * 70)\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    # ============ TRAINING MODE ============\n",
+    "    model.train()  # Set model to training mode\n",
+    "\n",
+    "    # Forward pass\n",
+    "    train_outputs = model(X_train_tensor)\n",
+    "    train_loss = criterion(train_outputs, y_train_tensor)\n",
+    "\n",
+    "    # Backward pass and optimization\n",
+    "    optimizer.zero_grad()  # Clear previous gradients\n",
+    "    train_loss.backward()  # Compute gradients (backpropagation!)\n",
+    "    optimizer.step()  # Update weights\n",
+    "\n",
+    "    # ============ EVALUATION MODE ============\n",
+    "    model.eval()  # Set model to evaluation mode\n",
+    "    with torch.no_grad():  # Disable gradient computation for evaluation\n",
+    "        # Training accuracy\n",
+    "        _, train_predicted = torch.max(train_outputs, 1)\n",
+    "        train_acc = (train_predicted == y_train_tensor).float().mean()\n",
+    "\n",
+    "        # Test loss and accuracy\n",
+    "        test_outputs = model(X_test_tensor)\n",
+    "        test_loss = criterion(test_outputs, y_test_tensor)\n",
+    "        _, test_predicted = torch.max(test_outputs, 1)\n",
+    "        test_acc = (test_predicted == y_test_tensor).float().mean()\n",
+    "\n",
+    "    # Store history\n",
+    "    train_losses.append(train_loss.item())\n",
+    "    test_losses.append(test_loss.item())\n",
+    "    train_accuracies.append(train_acc.item())\n",
+    "    test_accuracies.append(test_acc.item())\n",
+    "\n",
+    "    # Print progress every 200 epochs\n",
+    "    if (epoch + 1) % 200 == 0 or epoch == 0:\n",
+    "        print(\n",
+    "            f\"Epoch {epoch + 1:4d} | \"\n",
+    "            f\"Train Loss: {train_loss.item():.4f} | \"\n",
+    "            f\"Test Loss: {test_loss.item():.4f} | \"\n",
+    "            f\"Train Acc: {train_acc.item():.2%} | \"\n",
+    "            f\"Test Acc: {test_acc.item():.2%}\"\n",
+    "        )\n",
+    "\n",
+    "print(\"-\" * 70)\n",
+    "print(\"\\n✓ Training completed!\")\n",
+    "print(\"\\nFinal Results:\")\n",
+    "print(f\"  Training Loss: {train_losses[-1]:.4f}\")\n",
+    "print(f\"  Test Loss: {test_losses[-1]:.4f}\")\n",
+    "print(f\"  Training Accuracy: {train_accuracies[-1]:.2%}\")\n",
+    "print(f\"  Test Accuracy: {test_accuracies[-1]:.2%}\")"
+   ]
   }
  ],
  "metadata": {
