--- a/book/math_foundations/labs/prep/probability.ipynb
+++ b/book/math_foundations/labs/prep/probability.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bcc2ecd1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "import os\n",
     "\n",
     "import kagglehub\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -56,11 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11c43c34",
+   "execution_count": 3,
+   "id": "36933b16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'UPI': 0.4500882352941176, 'Cash': 0.24869607843137254, 'Uber Wallet': 0.1203529411764706, 'Credit Card': 0.10008823529411764, 'Debit Card': 0.08077450980392156}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pmf_dict = df[\"Payment Method\"].value_counts(normalize=True).to_dict()\n",
+    "\n",
+    "print(pmf_dict)\n",
+    "\n",
+    "\n",
+    "def pmf(payment_method):\n",
+    "    return pmf_dict.get(payment_method)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +92,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33110223",
+   "id": "2dadf60a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42955882352941177"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pmf(\"Cash\") + pmf(\"Credit Card\") + pmf(\"Debit Card\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,11 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1db04d44",
+   "execution_count": 5,
+   "id": "63c9d094",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0813953488372093\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = -3.1, 5.5\n",
+    "interval_start, interval_end = -0.1, 0.6\n",
+    "p_interval_manual = (interval_end - interval_start) / (b - a)\n",
+    "print(p_interval_manual)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,11 +154,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b5aa1d90",
+   "execution_count": 6,
+   "id": "545760cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. P(x ≤ 0) = 0.3925\n",
+      "2. P(-1 ≤ x ≤ 1) = 0.3386\n",
+      "3. P(x > 2) = 0.2623\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_normal = stats.norm(loc=0.6, scale=2.2)\n",
+    "\n",
+    "# 1. P(x ≤ 0)\n",
+    "p1 = std_normal.cdf(0)\n",
+    "print(f\"1. P(x ≤ 0) = {p1:.4f}\")\n",
+    "\n",
+    "# 2. P(-1 ≤ x ≤ 1)\n",
+    "p2 = std_normal.cdf(1) - std_normal.cdf(-1)\n",
+    "print(f\"2. P(-1 ≤ x ≤ 1) = {p2:.4f}\")\n",
+    "\n",
+    "# 3. P(x > 2)\n",
+    "p3 = 1 - std_normal.cdf(2)\n",
+    "print(f\"3. P(x > 2) = {p3:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,11 +195,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "826285c8",
+   "execution_count": 7,
+   "id": "87b5883c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('UPI', 'Auto'): 0.11113725490196079, ('UPI', 'Go Mini'): 0.09074509803921568, ('UPI', 'Go Sedan'): 0.07993137254901961, ('UPI', 'Bike'): 0.06829411764705882, ('Cash', 'Auto'): 0.061294117647058825, ('UPI', 'Premier Sedan'): 0.05464705882352941, ('Cash', 'Go Mini'): 0.050362745098039216, ('Cash', 'Go Sedan'): 0.04551960784313726, ('Cash', 'Bike'): 0.037784313725490196, ('UPI', 'eBike'): 0.03230392156862745, ('Uber Wallet', 'Auto'): 0.031, ('Cash', 'Premier Sedan'): 0.029313725490196077, ('Credit Card', 'Auto'): 0.025176470588235293, ('Uber Wallet', 'Go Mini'): 0.0231078431372549, ('Uber Wallet', 'Go Sedan'): 0.021254901960784313, ('Debit Card', 'Auto'): 0.020558823529411765, ('Credit Card', 'Go Mini'): 0.019666666666666666, ('Credit Card', 'Go Sedan'): 0.018470588235294117, ('Uber Wallet', 'Bike'): 0.017578431372549018, ('Cash', 'eBike'): 0.01673529411764706, ('Debit Card', 'Go Mini'): 0.01576470588235294, ('Credit Card', 'Bike'): 0.014970588235294117, ('Uber Wallet', 'Premier Sedan'): 0.014745098039215686, ('Debit Card', 'Go Sedan'): 0.014411764705882353, ('UPI', 'Uber XL'): 0.013029411764705883, ('Credit Card', 'Premier Sedan'): 0.01215686274509804, ('Debit Card', 'Bike'): 0.011980392156862744, ('Debit Card', 'Premier Sedan'): 0.009872549019607843, ('Uber Wallet', 'eBike'): 0.008872549019607844, ('Cash', 'Uber XL'): 0.007686274509803921, ('Credit Card', 'eBike'): 0.00692156862745098, ('Debit Card', 'eBike'): 0.005568627450980392, ('Uber Wallet', 'Uber XL'): 0.0037941176470588237, ('Credit Card', 'Uber XL'): 0.0027254901960784314, ('Debit Card', 'Uber XL'): 0.0026176470588235292}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pmf_dict = df[[\"Payment Method\", \"Vehicle Type\"]].value_counts(normalize=True).to_dict()\n",
+    "\n",
+    "print(pmf_dict)\n",
+    "\n",
+    "\n",
+    "def pmf(payment_method, vehicle_type):\n",
+    "    return pmf_dict.get((payment_method, vehicle_type))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,11 +231,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd17609e",
+   "execution_count": 9,
+   "id": "aa6de425",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(Debit Card, Bike) = 0.0120\n",
+      "P(Cash, Uber XL or Premier Sedan) = 0.0370\n",
+      "P(eBike) = 0.0704\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = pmf(\"Debit Card\", \"Bike\")\n",
+    "print(f\"P(Debit Card, Bike) = {p1:.4f}\")\n",
+    "\n",
+    "p2 = pmf(\"Cash\", \"Uber XL\") + pmf(\"Cash\", \"Premier Sedan\")\n",
+    "print(f\"P(Cash, Uber XL or Premier Sedan) = {p2:.4f}\")\n",
+    "\n",
+    "p3 = sum([pmf(method, \"eBike\") for method in df[\"Payment Method\"].dropna().unique()])\n",
+    "print(f\"P(eBike) = {p3:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,11 +267,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e664ffbb",
+   "execution_count": 10,
+   "id": "4e540996",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UPI:\n",
+      "\tmarginal: 0.4501\n",
+      "\tconditional: 0.0453\n",
+      "Debit Card:\n",
+      "\tmarginal: 0.0808\n",
+      "\tconditional: 0.0082\n",
+      "Cash:\n",
+      "\tmarginal: 0.2487\n",
+      "\tconditional: 0.0244\n",
+      "Uber Wallet:\n",
+      "\tmarginal: 0.1204\n",
+      "\tconditional: 0.0127\n",
+      "Credit Card:\n",
+      "\tmarginal: 0.1001\n",
+      "\tconditional: 0.0096\n"
+     ]
+    }
+   ],
+   "source": [
+    "marginal_ps = {\n",
+    "    method: sum(pmf(method, vehicle_type) for vehicle_type in df[\"Vehicle Type\"].dropna().unique())\n",
+    "    for method in df[\"Payment Method\"].dropna().unique()\n",
+    "}\n",
+    "\n",
+    "conditional_ps = {\n",
+    "    method: sum(pmf(method, vehicle_type) for vehicle_type in [\"eBike\", \"Uber XL\"])\n",
+    "    for method in df[\"Payment Method\"].dropna().unique()\n",
+    "}\n",
+    "\n",
+    "for method, p_marginal in marginal_ps.items():\n",
+    "    print(f\"{method}:\")\n",
+    "    print(f\"\\tmarginal: {p_marginal:.4f}\")\n",
+    "    p_conditional = conditional_ps.get(method)\n",
+    "    print(f\"\\tconditional: {p_conditional:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +322,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89e00eb7",
+   "execution_count": 11,
+   "id": "351cb201",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Uber XL: 1\n",
+      "# eBike: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pmf_dict = df[\"Vehicle Type\"].value_counts(normalize=True).to_dict()\n",
+    "\n",
+    "n = 30\n",
+    "n_xl = int(np.round(pmf_dict.get(\"Uber XL\") * n))\n",
+    "n_eb = int(np.round(pmf_dict.get(\"eBike\") * n))\n",
+    "\n",
+    "print(f\"# Uber XL: {n_xl}\")\n",
+    "print(f\"# eBike: {n_eb}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,11 +357,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b60e4619",
+   "execution_count": 12,
+   "id": "40a72723",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 450: P(X≤x) = 0.0228\n",
+      "x = 530: P(X≥x) = 0.1151\n",
+      "x = 505: P(X≥x) = 0.4207\n",
+      "x = 600: P(X≥x) = 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = 500\n",
+    "sigma = 25\n",
+    "\n",
+    "for x in [450, 530, 505, 600]:\n",
+    "    p_right = 1 - stats.norm.cdf(x, mu, sigma)\n",
+    "    p_left = stats.norm.cdf(x, mu, sigma)\n",
+    "\n",
+    "    if x < mu:\n",
+    "        print(f\"x = {x:3d}: P(X≤x) = {p_left:.4f}\")\n",
+    "    else:\n",
+    "        print(f\"x = {x:3d}: P(X≥x) = {p_right:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,11 +401,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a31a14ea",
+   "execution_count": 13,
+   "id": "c123df99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manual\n",
+      "t-statistic: 0.5653\n",
+      "p-value (two-tailed): 0.5779\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data\n",
+    "batt = np.array(\n",
+    "    [\n",
+    "        23.2,\n",
+    "        25.1,\n",
+    "        22.8,\n",
+    "        24.5,\n",
+    "        23.7,\n",
+    "        25.3,\n",
+    "        22.5,\n",
+    "        26.1,\n",
+    "        24.0,\n",
+    "        23.5,\n",
+    "        24.8,\n",
+    "        23.1,\n",
+    "        25.0,\n",
+    "        24.2,\n",
+    "        23.9,\n",
+    "        22.7,\n",
+    "        25.5,\n",
+    "        24.1,\n",
+    "        23.6,\n",
+    "        24.7,\n",
+    "        23.4,\n",
+    "        24.9,\n",
+    "    ]\n",
+    ")\n",
+    "mu_0 = 24  # Hypothesized mean\n",
+    "\n",
+    "# Calculate sample statistics\n",
+    "sample_mean = batt.mean()\n",
+    "sample_std = batt.std(ddof=1)  # N-1 for sample standard deviation\n",
+    "n = len(batt)\n",
+    "se = sample_std / np.sqrt(n)  # Standard error\n",
+    "\n",
+    "# Calculate t-statistic manually\n",
+    "t_statistic_manual = (sample_mean - mu_0) / se\n",
+    "\n",
+    "# Degrees of freedom\n",
+    "df = n - 1\n",
+    "\n",
+    "# Calculate p-value (two-tailed test)\n",
+    "p_value_manual = 2 * (1 - stats.t.cdf(abs(t_statistic_manual), df))\n",
+    "\n",
+    "print(\"Manual\")\n",
+    "print(f\"t-statistic: {t_statistic_manual:.4f}\")\n",
+    "print(f\"p-value (two-tailed): {p_value_manual:.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,11 +480,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "269f25a2",
+   "execution_count": 14,
+   "id": "66024698",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manual\n",
+      "t-statistic: -11.2387\n",
+      "p-value: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data\n",
+    "control = np.array([72, 68, 75, 71, 69, 74, 70, 73, 68, 71, 72, 70, 74, 69, 71])\n",
+    "treatment = np.array([78, 82, 76, 80, 79, 81, 77, 83, 79, 80, 78, 81, 82, 79, 80])\n",
+    "\n",
+    "# Manual calculation\n",
+    "n1 = len(control)\n",
+    "n2 = len(treatment)\n",
+    "mean1 = control.mean()\n",
+    "mean2 = treatment.mean()\n",
+    "std1 = control.std(ddof=1)\n",
+    "std2 = treatment.std(ddof=1)\n",
+    "\n",
+    "# Pooled standard deviation (assuming equal variances)\n",
+    "pooled_std = np.sqrt(((n1 - 1) * std1**2 + (n2 - 1) * std2**2) / (n1 + n2 - 2))\n",
+    "\n",
+    "# Standard error of difference\n",
+    "se_diff = pooled_std * np.sqrt(1 / n1 + 1 / n2)\n",
+    "\n",
+    "# t-statistic\n",
+    "t_stat_manual = (mean1 - mean2) / se_diff\n",
+    "\n",
+    "# Degrees of freedom\n",
+    "df_manual = n1 + n2 - 2\n",
+    "\n",
+    "# p-value for one-sided test (control > treatment)\n",
+    "p_value_manual = 1 - stats.t.cdf(t_stat_manual, df_manual)\n",
+    "\n",
+    "print(\"Manual\")\n",
+    "print(f\"t-statistic: {t_stat_manual:.4f}\")\n",
+    "print(f\"p-value: {p_value_manual:.4f}\")"
+   ]
   }
  ],
  "metadata": {
