--- a/book/math_foundations/linalg/inverse.ipynb
+++ b/book/math_foundations/linalg/inverse.ipynb
@@ -15,7 +15,7 @@
                 "$$\n",
                 "\n",
                 "(target-matrix-inverse)=\n",
-                "**De matrix inverse $\\pmb{A}^{-1}$ is de matrix die bij vermenigvuldiging met \\pmb{A} de identiteitsmatrix \\pmb{I}_n oplevert**."
+                "**De matrix inverse $\\pmb{A}^{-1}$ is de matrix die bij vermenigvuldiging met $\\pmb{A}$ de identiteitsmatrix $\\pmb{I}_n$ oplevert**."
             ]
         },
         {
