--- a/book/math_foundations/labs/prep/linalg.ipynb
+++ b/book/math_foundations/labs/prep/linalg.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8031aeeb",
    "metadata": {},
    "outputs": [],
@@ -39,11 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f9df8ab",
+   "execution_count": 2,
+   "id": "68033e70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  5  8 11]\n",
+      "[1 3 5 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([2, 5, 8, 11])\n",
+    "b = np.array([1, 3, 5, 7])\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4254bbdf",
+   "execution_count": 3,
+   "id": "ffe1f511",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6. 7.]\n",
+      " [4. 3.]\n",
+      " [5. 2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.array([[6.0, 7.0], [4.0, 3.0], [5.0, 2.0]])\n",
+    "print(B)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,11 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f6ece8c7",
+   "execution_count": 4,
+   "id": "21aa8257",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6. 4. 5.]\n",
+      " [7. 3. 2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B.T)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,11 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5cfcaa4",
+   "execution_count": 5,
+   "id": "bc74c173",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B[1, 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,11 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd497242",
+   "execution_count": 6,
+   "id": "e4a7d23f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8, 10, 12, 14])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b + 7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,11 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1c7e42a",
+   "execution_count": 7,
+   "id": "602be0e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.6 17.5]\n",
+      " [12.8 13.2]\n",
+      " [25.5 13.8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1.1, 2.5], [3.2, 4.4], [5.1, 6.9]])\n",
+    "\n",
+    "print(A * B)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,11 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11c55ef3",
+   "execution_count": 8,
+   "id": "f5102ab3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "134\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = np.dot(a, b)  # or a @ b\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3cf55bf4",
+   "execution_count": 9,
+   "id": "52cb2516",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[177.5  81.5  63.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.array([3.8, 22.1])\n",
+    "p = np.dot(B, c)  # or B @ c\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,11 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe8bd826",
+   "execution_count": 10,
+   "id": "af5d873f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.16515138991168\n"
+     ]
+    }
+   ],
+   "source": [
+    "l2_norm = np.sqrt(np.dot(b, b))  # or np.linalg.norm(b)\n",
+    "print(l2_norm)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,11 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dfd68696",
+   "execution_count": 11,
+   "id": "1de5c34d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 0 0 0]\n",
+      " [0 7 0 0]\n",
+      " [0 0 1 0]\n",
+      " [0 0 0 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.diag(np.array([5, 7, 1, 4]))\n",
+    "print(C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,11 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8146ed3c",
+   "execution_count": 12,
+   "id": "e24a5c03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = np.identity(7)\n",
+    "print(D)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,11 +401,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f003b62",
+   "execution_count": 13,
+   "id": "224c7843",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.1 0.  0. ]\n",
+      " [3.2 4.4 0. ]\n",
+      " [5.1 6.9 1.2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "E = np.array([[1.1, 2.5, 3.0], [3.2, 4.4, 3.5], [5.1, 6.9, 1.2]])\n",
+    "F = np.tril(E)\n",
+    "print(F)"
+   ]
   }
  ],
  "metadata": {
