complete Euc norm descr

--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -469,7 +469,7 @@
                 "(target-norm)=\n",
                 "**De norm van een vector in een bepaalde ruimte drukt de afstand uit tussen de oorsprong en het punt waar de vector betrekking op heeft**.\n",
                 "(target-euclidean-norm)=\n",
-                "In een **_Euclidische_ ruimte wordt die afstand gegeven door de $L^2$ norm. De $L^2$ norm van een vector bekomt men door het dot product te nemen van de vector met zichzelf**:  \n",
+                "In een **_Euclidische_ ruimte wordt die afstand gegeven door de $L^2$ norm. De $L^2$ norm van een vector bekomt men door het dot product te nemen van de vector met zichzelf, gevolgd door een vierkantswortel**:  \n",
                 "\n",
                 "\\begin{align}\n",
                 "||\\pmb{x}||_2 &= \\sqrt{\\sum_{i}x_i^2} \\\\\n",
