--- a/book/math_foundations/labs/linalg.ipynb
+++ b/book/math_foundations/labs/linalg.ipynb
@@ -1605,7 +1605,7 @@
     "\n",
     "1. Matrix notatie\n",
     "\n",
-    "$$\\mathbf{y} = \\begin{bmatrix} 14 \\\\ 18 \\\\ 12 \\end{bmatrix}, \\quad \\mathbf{X} = \\begin{bmatrix} 2 & 1 & 3 \\\\ 1 & 4 & 2 \\\\ 3 & 2 & 1 \\end{bmatrix}, \\quad \\mathbf{b} = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}$$"
+    "$$\\mathbf{y} = \\begin{bmatrix} 14 \\\\ 18 \\\\ 12 \\end{bmatrix}, \\quad \\mathbf{X} = \\begin{bmatrix} 2 & 1 & 3 \\\\ 1 & 4 & 2 \\\\ 3 & 2 & 1 \\end{bmatrix}, \\quad \\mathbf{b} = \\begin{bmatrix} \\beta_1 \\\\ \\beta_2 \\\\ \\beta_3 \\end{bmatrix}$$"
    ]
   },
   {
