--- a/book/math_foundations/labs/prep/backprop.ipynb
+++ b/book/math_foundations/labs/prep/backprop.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "source": [
     "## ✍️\n",
-    "Train een `NeuralNetwork` model (zie hierboven) met 10 hidden layers."
+    "Train een `NeuralNetwork` model (zie hierboven) met 10 hidden neurons."
    ]
   },
   {
