--- a/book/math_foundations/labs/prep/probability.ipynb
+++ b/book/math_foundations/labs/prep/probability.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "## ✍️\n",
-    "Voor een standaard normale verdeling $\\mathcal{N}(0.6, 2.2^2)$, bereken:\n",
+    "Voor een normale verdeling $\\mathcal{N}(0.6, 2.2^2)$, bereken:\n",
     "1. $P(x \\leq 0)$\n",
     "2. $P(-1 \\leq x \\leq 1)$\n",
     "3. $P(x > 2)$"
