fashion mnist ready

--- a/book/ml_principles/labs/nlp_nanogpt.ipynb
+++ b/book/ml_principles/labs/nlp_nanogpt.ipynb
@@ -5,7 +5,7 @@
    "id": "4b9432bb",
    "metadata": {},
    "source": [
-    "# ML voor taalverwerking\n",
+    "# Taalverwerking\n",
     "\n",
     "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/nlp_nanogpt.ipynb)"
    ]
