--- a/book/ml_principles/labs/prep/structured.ipynb
+++ b/book/ml_principles/labs/prep/structured.ipynb
@@ -5,7 +5,7 @@
    "id": "62c52e19",
    "metadata": {},
    "source": [
-    "# ML voor gestructureerde data\n",
+    "# Gestructureerde data\n",
     "\n",
     "## [Input notebook](../structured_airbnb.ipynb)\n",
     "\n",
