--- a/book/ml_principles/labs/imggen_butterfly.ipynb
+++ b/book/ml_principles/labs/imggen_butterfly.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ML voor beeldgeneratie\n",
+        "# Beeldgeneratie\n",
         "\n",
         "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imggen_butterfly.ipynb)\n",
         "\n",
