--- a/book/ml_principles/labs/prep/imgrec.ipynb
+++ b/book/ml_principles/labs/prep/imgrec.ipynb
@@ -5,7 +5,7 @@
    "id": "cf95af2b",
    "metadata": {},
    "source": [
-    "# Beeldherkenning\n",
+    "# Vragen\n",
     "\n",
     "## [Input notebook](./fashion_mnist.ipynb)\n",
     "\n",
