--- a/book/ml_principles/labs/prep/nlp.ipynb
+++ b/book/ml_principles/labs/prep/nlp.ipynb
@@ -5,7 +5,7 @@
    "id": "4cb5222d",
    "metadata": {},
    "source": [
-    "# Taalverwerking\n",
+    "# Vragen\n",
     "\n",
     "## [Input notebook](./sentiment_imdb.ipynb)\n",
     "\n",
